<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>app.owlcms</groupId>
	<artifactId>owlcms4top</artifactId>
	<version>4.9.0.1</version>
	<packaging>pom</packaging>
	<modules>
		<module>shared</module>
		<module>owlcms</module>
		<module>publicresults</module>
		<module>owlcms-docker</module>
		<module>playwright</module>
	</modules>

	<organization>
		<name>Jean-François Lamy</name>
		<url>https://github.com/jflamy</url>
	</organization>

	<properties>
		<!-- revision is overridden by .github/workflow/release.yaml for the official
		builds. this value is only used for local development -->
		<revision>64.0.0-SNAPSHOT</revision>

		<vaadin.version>24.9.5</vaadin.version>
		<logback.version>1.5.19</logback.version>
		<slf4j.version>2.0.7</slf4j.version>
		<hibernate.version>5.6.15.Final</hibernate.version>
		<guava.version>32.0.0-jre</guava.version>

		<!-- maven configs -->
		<java.release>17</java.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<rootOutputDir>${project.build.directory}</rootOutputDir>
		
		<!-- used by Azure Devops builds -->
		<owlcms-maven-url>https://maven.jflamy.dev</owlcms-maven-url>
		<owlcms-maven-suffix>/releases</owlcms-maven-suffix> 
		<owlcms-docker>docker.io/owlcms</owlcms-docker>

		<!-- Pinned Apache Commons versions used across modules -->
		<commons.io.version>2.19.0</commons.io.version>
	</properties>
	<repositories>
		<repository>
			<id>Vaadin Directory</id>
			<url>https://maven.vaadin.com/vaadin-addons</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>owlcms-maven-repo</id>
			<url>${owlcms-maven-url}${owlcms-maven-suffix}</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<!-- Main Maven repository -->
		<pluginRepository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>Vaadin Prereleases</id>
			<url>https://maven.vaadin.com/vaadin-prereleases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- Force consistent Jackson versions to prevent classpath conflicts -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.19.1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.19.1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.19.1</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-access</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-ext</artifactId>
				<version>${slf4j.version}</version>
				<type>jar</type>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jul-to-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>app.owlcms</groupId>
				<artifactId>shared</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.npm</groupId>
				<artifactId>mobile-drag-drop</artifactId>
				<version>2.3.0-rc.1</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
		</dependencies>

	</dependencyManagement>

	<!-- note that you must use mvn command line to deploy, does not work with
	embedded eclipse maven -->
	<!-- for example: mvn -s c:\Dev\.m2\settings.xml -Dmaven.test.skip=true
	deploy -->
	<distributionManagement>
		<repository>
			<id>owlcms-maven-repo</id>
			<url>https://maven.jflamy.dev/releases</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>flow-server</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>flow-client</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>flow-push</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>flow-html-components</artifactId>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<release>21</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<processAllModules>true</processAllModules>
						<allowAnyUpdates>true</allowAnyUpdates>
						<allowDowngrade>true</allowDowngrade>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<skip>true</skip>
						<executable>java</executable>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>



		<plugins>
			<plugin>
				<?m2e ignore?>
				<!-- this ensures that ${revision} is substituted in the
				installed/deployed jars -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.2.5</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>fatjar</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>package</phase>
						<inherited>false</inherited>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}</outputDirectory>
							<overwrite>true</overwrite>
							<resources>
								<resource>
									<directory>src/main/markdown</directory>
									<filtering>true</filtering>
									<excludes>
										<exclude>alpha.md</exclude>
										<exclude>beta.md</exclude>
										<exclude>release.md</exclude>
										<exclude>rc.md</exclude>
									</excludes>
								</resource>
								<!-- resource>
								<directory>src/main/azure-pipelines</directory>
								<include>azure-pipelines.yml</include>
								<filtering>true</filtering> 
                                    </resource> -->
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.0.0-M1</version>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
